force-app/main/default/objects/ssot__CourseOfferingParticipant__dlm/fields/ssot__CourseOfferingId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CourseOfferingId__c</fullName>
    <label>Course Offering</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CourseOfferingId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>