force-app/main/default/objects/ssot__CourseOfferingParticipant__dlm/fields/ssot__IsRepeatAttempt__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsRepeatAttempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Repeat Attempt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsRepeatAttempt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>