force-app/main/default/objects/ssot__CourseOfferingParticipant__dlm/fields/ssot__ParticipantAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParticipantAccountId__c</fullName>
    <label>Participant Account</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParticipantAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>