force-app/main/default/objects/ssot__CourseOfferingParticipant__dlm/fields/ssot__ParticipantAffiliation__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParticipantAffiliation__c</fullName>
    <label>Participant Affiliation</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParticipantAffiliation</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>