force-app/main/default/objects/ssot__CourseOfferingParticipant__dlm/fields/ssot__ParticipantContactId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParticipantContactId__c</fullName>
    <label>Participant Contact</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParticipantContactId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>