force-app/main/default/objects/ssot__CourseOfferingParticipant__dlm/fields/ssot__ParticipationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParticipationStatus__c</fullName>
    <label>Participation Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParticipationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>