force-app/main/default/objects/ssot__CourseOfferingParticipant__dlm/fields/ssot__rel_1719817650868_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817650868_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CourseOfferingParticipant_AcademicTe_rel</label>
    <referenceTo>ssot__AcademicTermEnrollment__dlm</referenceTo>
    <relationshipLabel>CourseOfferingParticipant_AcademicTe_rel</relationshipLabel>
    <relationshipName>rel_1719817650868_end</relationshipName>
    <type>Lookup</type>
</CustomField>