force-app/main/default/objects/ssot__CourseOfferingParticipant__dlm/fields/ssot__rel_1719817763151_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817763151_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CourseOfferingParticipant_Participan_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>CourseOfferingParticipant_Participan_rel</relationshipLabel>
    <relationshipName>rel_1719817763151_end</relationshipName>
    <type>Lookup</type>
</CustomField>