force-app/main/default/objects/ssot__CourseOfferingParticipant__dlm/fields/ssot__StartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__StartDate__c</fullName>
    <label>StartDate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>